@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.1 2005/08/10 06:28:42 uebayasi Exp $
+$NetBSD: distinfo,v 1.2 2006/03/11 06:32:31 uebayasi Exp $
 
-SHA1 (WiLiKi-0.5.3.tgz) = eff0dd1238d6b31fcd11fa5d35d69c8ed9d26f8a
-RMD160 (WiLiKi-0.5.3.tgz) = 5bec0ac33087623983a78ae1f3680aa2ca4f29b9
-Size (WiLiKi-0.5.3.tgz) = 109962 bytes
+SHA1 (WiLiKi-0.6.2.tgz) = d85a472cece23644c9f344a17be274f361a9d5bd
+RMD160 (WiLiKi-0.6.2.tgz) = dbe766235c16eeed25427e3ee6c5a4fa984ec4b5
+Size (WiLiKi-0.6.2.tgz) = 133217 bytes
